set last navigation item dropdown to left instead of right to prevent horizontal scrolling

--- a/sites/all/themes/fj16/sass/_header.scss
+++ b/sites/all/themes/fj16/sass/_header.scss
@@ -213,6 +213,16 @@
           }
         }
       }
+      
+      li:last-child ul {
+        left: auto;
+        right: 0;
+        
+        li.expanded ul {            
+          left: auto;
+          right: $submenu-width;
+        }
+      }
 
       // Show dropdown on hover
       li:hover>ul, ul:hover {
